--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -18,7 +18,7 @@
             </div>
             <hr>
             <div class="row">
-                <div>
+                <div class="container">
                     <div class="row">
                         {% for news_item in news_items_published %}
                             <div class="col-sm-12 col-md-12 col-lg-6">
