--- a/news/templates/news/news_item.html
+++ b/news/templates/news/news_item.html
@@ -22,9 +22,9 @@
                     <div class="col">
                         <div class="text-center">
                             {% if news_item.image %}
-                                <img class="card-img-top" src="{{ news_item.image.url }}" alt="{{ news_item.title }}" />
+                                <img class="news-card-detail-img-top image-fluid" src="{{ news_item.image.url }}" alt="{{ news_item.title }}" />
                             {% else %}
-                                <img class="card-img-top" src="{{ news_item.image_url }}" alt="{{ news_item.title }}" />
+                                <img class="news-card-detail-img-top image-fluid" src="{{ news_item.image_url }}" alt="{{ news_item.title }}" />
                             {% endif %}
                         </div>
                     </div>
@@ -104,29 +104,7 @@
                         </div>
                         {% endfor %}
                     </div>
-                </div>
-                <!-- Add a comment form -->
-                <div class="row pb-5">
-                    <div class="col-lg-6 col-md-12 mt-1 pl-0 pb-4">
-                        {% if request.user.is_authenticated %}
-                            <h3 class="text-uppercase">Add a comment</h3>
-                                <form class="form" method="POST">
-                                    {% csrf_token %}
-                                    <fieldset>
-                                        {{ comment_form|crispy }}
-                                    </fieldset>
-                                    <button class="btn black-btn" type="submit"> Post
-                                        Comment</button>
-                                </form>
-                        {% else %}
-                            <div>
-                                <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or
-                                <a class="text-info" href="{% url 'account_login' %}">login</a> to comment on this post.
-                            </div>
-                        {% endif %}
-                    </div>
-                </div>
-                {% if comments.has_other_pages %}
+                    {% if comments.has_other_pages %}
                     <!-- Pagination -->
                     <div class="pagination-holder p-4">
                                     <nav aria-label="Products sorted">
@@ -151,7 +129,29 @@
                                       </ul>
                                     </nav>
                                 </div>
-                {% endif %}
+                    {% endif %}
+                </div>
+                <!-- Add a comment form -->
+                <div class="row pb-5">
+                    <div class="col-lg-6 col-md-12 mt-1 pl-0 pb-4">
+                        {% if request.user.is_authenticated %}
+                            <h3 class="text-uppercase">Add a comment</h3>
+                                <form class="form" method="POST">
+                                    {% csrf_token %}
+                                    <fieldset>
+                                        {{ comment_form|crispy }}
+                                    </fieldset>
+                                    <button class="btn black-btn" type="submit"> Post
+                                        Comment</button>
+                                </form>
+                        {% else %}
+                            <div>
+                                <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or
+                                <a class="text-info" href="{% url 'account_login' %}">login</a> to comment on this post.
+                            </div>
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
 {% endblock %}
