--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -18,11 +18,11 @@
                         <div class="image-container my-5">
                             {% if product.image %}
                                 <a href="{{ product.image.url }}" target="_blank">
-                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    <img class="card-img-product-detail img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                                 </a>
                                 {% else %}
                                 <a href="">
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                    <img class="card-img-product-detail img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 </a>
                             {% endif %}
                         </div>
@@ -73,7 +73,7 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <p class="mt-2"><strong>Quantity:</strong></p>
-                                        <div class="form-group w-50">
+                                        <div class="form-group quantity-width">
                                             <div class="input-group">
                                                 <div class="input-group-prepend">
                                                     <button class="decrement-qty btn btn-black rounded-0"
@@ -99,17 +99,17 @@
                                             </div>
                                         </div>
                                     </div>
-                                 </div><br>
+                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                            <a href="{% url 'products' %}" class="btn black-btn">Keep Shopping</a>
+                                            <a href="{% url 'products' %}" class="btn black-btn mobile-padding">Keep Shopping</a>
                                             <input type="submit" class="btn green-btn" value="Add to Bag">
                                         </div>
                                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
                                     {% endwith %}
                                 </div>
                             </form>
-                        <br><br>
+                            <br>
                             <div class="row">
                                 <div class="col-12">
                                     <p class="mb-0 uppercase">Colour: {{ product.colour }}</p>
@@ -145,7 +145,7 @@
                         <br>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <h2 class="mb-0 product-name">THE FINER DETAILS</h2>
+                        <h2 class="mb-0 product-name">FEATURES</h2>
                         <ul>
                             {% if product.feature1 %}
                                 <li class="text-muted">{{ product.feature1 }}</li>
@@ -162,16 +162,16 @@
                         </ul>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-12 offset-lg-2">
-                        <div class="container">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
                             <div class="row">
                                 <div class="col mb-4">
                                     <h2 class="text-uppercase mt-3">reviews ({{ number_of_reviews }})</h2>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-6">
+                                <div class="col-12">
                                     {% for review in reviews %}
                                         <div class="shadow-sm p-1 mb-3 bg-white rounded">
                                             <p class="font-weight-bold mb-2 mt-3">Posted by: {{ review.user }} on {{ review.create_date }}</p>
