refactor: Add news item count

--- a/news/templates/news/manage_news_items.html
+++ b/news/templates/news/manage_news_items.html
@@ -16,7 +16,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col mt-3">
-                            <h1 class="header-font mb-2 pt-1 text-center text-black">News Items <a class="btn green-btn" href="{% url 'add_news_item' %}">Add</a></h1>
+                            <h1 class="header-font mb-2 pt-1 text-center text-black">News Items ({{ news_items_count }}) <a class="btn green-btn" href="{% url 'add_news_item' %}">Add</a></h1>
                         </div>
                     </div>
                     <!-- All News Items -->
