refactor: Add description string

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-4 offset-lg-2">
-                        <h2 class="mb-0 product-name">{{ product.name }}</h2>
+                        <h2 class="mb-0 product-name">DESCRIPTION</h2>
                         <p class="mb-0">{{ product.description }}</p>
                         <br>
                     </div>
