refactor: Minor footer text update

--- a/templates/base.html
+++ b/templates/base.html
@@ -144,7 +144,7 @@
                     <span class="d-none d-lg-inline ml-3 mr-3 font-white">-</span>
                     <span class="font-white">Free delivery on orders over €{{ free_delivery_threshold }}!</span>
                     <span class="d-none d-lg-inline ml-3 mr-3 font-white">-</span>
-                    <span class="d-none d-lg-inline font-white"> Professional packaging for EVERY order</span>
+                    <span class="d-none d-lg-inline font-white"> Professional packaging for every order</span>
                 </div>
             </div>
         </div>
