--- a/favourites/templates/favourites/favourites.html
+++ b/favourites/templates/favourites/favourites.html
@@ -66,7 +66,7 @@
                                                 </div>
                                           </div>
                                             <div class="center-div pt-3">
-                                                <a class="btn green-btn" data-bs-toggle="modal" data-bs-target="#deleteFavourite{{ favourite.id }}">Delete</a>
+                                                <a class="btn black-btn" data-bs-toggle="modal" data-bs-target="#deleteFavourite{{ favourite.id }}">Delete</a>
                                                 <!-- Delete favourite modal -->
                                                 <div class="modal fade" id="deleteFavourite{{ favourite.id }}" tabindex="-1"  aria-hidden="true">
                                                     <div class="modal-dialog">
