--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -13,7 +13,7 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy }}
-        <a class="btn black-btn" href="{% url 'account_login' %}">Back to Login</a>
+        <a class="btn black-btn mobile-padding" href="{% url 'account_login' %}">Back to Login</a>
         <input type="submit" class="btn green-btn" value="{% trans 'Reset My Password' %}" />
     </form>
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
