--- a/favourites/templates/favourites/favourites.html
+++ b/favourites/templates/favourites/favourites.html
@@ -56,7 +56,7 @@
                                                     <h2 class="card-title font-black">{{ favourite.name }}</h2>
                                                 </div>
                                                 <div class="col-12">
-                                                    <h3 class="font-weight-light font-black">{{ favourite.category }}</h3>
+                                                    <h3 class="font-weight-light font-black">{{ favourite.category.friendly_name }}</h3>
                                                 </div>
                                                 <div class="col-6 font-black">
                                                     {{ favourite.price }}
